# Sport-Data-Pipeline

./: .gitignore  .pre-commit-config.yaml  Datenbank-Schema.md  Dockerfile  README.md  README_SCHEMA_IMPROVEMENTS.md  SETUP_GUIDE.md  TECHNICAL_DOCUMENTATION.md  bundesliga_dump.json  demo_bundesliga_results.json  docker-compose.yml  entity_mapper.py  finn-dahmen.json  main.py  pyproject.toml  requirements.txt  schema.sql  sitecustomize.py  sports_database_schema.sql  waldschmidt.json
.github/: instructions.md
config/: term_mappings.yaml
database/: schema.sql  seed_data.sql
docs/: Datenbank_Schema.md  MODULARIZATION_SUMMARY.md  REVIEW_NOTES_2025-09-09.md  REVIEW_STRUCTURE_REDUNDANCY_2025-09-09.md  SETUP_PowerShell_TESTS.md  Setup.md  Setup_Guide.md  Sport Data Pipeline - Modularization complete.md  Sport Data Pipeline.md  Technical_Documentation.md  migration_bundesliga_scraper_refactor.md  sample_data.sql  schema_validation.sql  sports_data_documentation.md
scripts/: analyze_page.py  api_health_smoke.py  check_table_count.py  courtside_debug.py  courtside_minimal_test.py  courtside_standalone_test.py  db_diagnostics.py  debug_courtside.py  demo_external_id_mapping.py  dev.ps1  inspect_page.py  manual_explore.py  preview_transfermarkt_injuries.py  preview_transfermarkt_injuries_min.py  report_club_field_coverage.py  run_bundesliga_club_scraper.py  run_courtside_scrape_preview.py  run_flashscore_once.py  run_scraper.py  save_page.py  scrape_bundesliga_clubs.py  setup_tests.ps1  show_injuries.py  simple_debug.py  test_api.py  test_bundesliga_scraper_demo.py  (+2 more)
(+102 files in other folders)
