[project]
name = "sport-data-pipeline"
version = "0.1.0"
requires-python = ">=3.09"

[tool.black]
line-length = 100
target-version = ["py309"]

[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["src"]

[tool.ruff]
line-length = 100
target-version = "py309"
select = [
  "E",   # pycodestyle errors
  "F",   # pyflakes
  "I",   # isort
  "UP",  # pyupgrade
]
ignore = [
  # add ignores as needed
]
exclude = [
  ".venv",
  "node_modules",
  "database",
  "reports",
  "logs",
  "sources",
  "docs",
]

[tool.ruff.isort]
known-first-party = ["src"]
